# rag-orchestrator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.integration.yml  docker-compose.prod.yml  docker-compose.yml  start.sh
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_sync_state.py  003_opensearch_module.py  004_drop_legacy_tables.py  005_pipeline_and_llm_settings.py  006_split_prompt_templates.py  007_increase_default_batch_sizes.py  008_add_translate_workers.py  009_word_based_chunk_defaults.py
backend/app/: config.py  database.py  dependencies.py  docling_client.py  lightrag_client.py  llm_client.py  main.py  markitdown_client.py  mcp_server.py  models.py  opensearch_client.py  pdf_direct.py  scheduler.py  seed.py
backend/app/crud/: folders.py
backend/tests/: conftest.py  test_admin_api.py  test_config.py  test_database.py  test_delete_job.py  test_docling_client.py  test_docling_pipeline.py  test_e2e_integration.py  test_files_api.py  test_folders_api.py  test_folders_model.py  test_index_job.py  test_lightrag_client.py  test_lightrag_integration.py  test_llm_client.py  test_markitdown_client.py  test_mcp_server.py  test_migrations.py  test_models.py  test_multiformat_pipeline.py  test_opensearch_client.py  test_opensearch_integration.py  test_parse_job.py  test_pdf_direct.py  test_pipeline.py  test_router.py  test_scan_job.py  test_scanner.py  test_scheduler.py  test_search_api.py  test_seed.py  test_sync_api.py  test_translate_job.py
docs/: PLAN.md  SPEC.md  (+2 more)
(+34 files in other folders)
