[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    "apscheduler>=3.11",
    "aiofiles>=23.0",
    "pymupdf4llm>=0.0.17",
    "markitdown[all]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running database (TEST_DATABASE_URL must be set)",
    "e2e: requires all three services running (docker-compose.integration.yml)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
